# SEAL-Python

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  1_bfv_basics.py  4_ckks_basics.py  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  build_docker.sh  helper.py  pyproject.toml  requirements.txt  seal.pyi  setup.py  test.py  wrapper.cpp
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  other-issue.md
.github/workflows/: python-package.yml  wheels.yml
SEAL/: SEAL.sln
SEAL/native/examples/: SEALExamples.vcxproj
SEAL/native/src/: SEAL.vcxproj
SEAL/native/src/seal/: ciphertext.h  kswitchkeys.h  plaintext.h  publickey.h  secretkey.h
examples/: 1_bfv_basics.py  2_encoders.py  3_levels.py  4_bgv_basics.py  5_ckks_basics.py  6_rotation.py  7_serialization.py  8_performance.py  matrix_operations.py  seal_helper.py
pyseal/: CMakeLists.txt  requirements.txt  setup.py  test.py  wrapper.cpp
pyseal.egg-info/: PKG-INFO  SOURCES.txt
seal_python.egg-info/: PKG-INFO  SOURCES.txt
src/: CMakeLists.txt  base64.cpp  requirements.txt  setup.py  wrapper.cpp  wrapper_with_pickle.cpp
tests/: 0_data_type.py  1_bfv_basics.py  2_encoders.py  3_levels.py  4_ckks_basics.py  5_rotation.py  6_performance.py  7_matrix_operations.py  docker_unittester.sh  seal_helper.py  unittests.py
